--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 </form>
 <button onclick = "submitNumber()" id="clickybutton">Submit</button>
+<p id="textelement">Total will be here...</p>
+
 <script type = "text/javascript" src="app.js"></script>
 
 
